# BIG_Query

./: .dockerignore  .flake8  .gitignore  .trivyignore  DEPLOYMENT_GUIDE.md  Dockerfile  HACKATHON_SURVEY.txt  HACKATHON_WRITEUP.md  PROJECT_SUMMARY.md  README.md  UPDATE_PLAN.md  config_template.py  demo_real_datasets.py  docker-compose.yml  hackathon_demo.py  main.py  pyproject.toml  pytest.ini  quick_test.py  requirements.txt  run_tests.py  setup.py  test_connection.py  working_demo.py
.github/workflows/: ci-cd.yml
docs/: api.rst  backup.html  conf.py  index.rst  installation.rst  modules.rst  quickstart.rst
notebooks/: ResumeMatcher.ipynb
src/: advanced_ml.py  api.py  bigquery_client.py  config.py  data_processor.py  dataset_loader.py  embedding_generator.py  feedback_generator.py  security.py  semantic_matcher.py  visualizer.py  worker.py
tests/: conftest.py  test_basic.py  test_integration.py  test_utils.py
web_app/: app.py
web_app/templates/: base.html  dashboard.html
