[tool.black]
line-length = 127
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 127
known_first_party = ["src"]
known_third_party = ["google", "pandas", "numpy", "sklearn", "flask", "redis", "celery"]
skip = [".gitignore", ".dockerignore"]
skip_glob = ["**/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google.*",
    "pandas.*",
    "numpy.*",
    "sklearn.*",
    "flask.*",
    "redis.*",
    "celery.*",
    "bigframes.*",
    "spacy.*",
    "nltk.*",
    "matplotlib.*",
    "seaborn.*",
    "plotly.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::UserWarning"
]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-powered-resume-matcher"
version = "1.0.0"
description = "AI-Powered Resume & Job Matcher using BigQuery AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Resume Matcher Team", email = "team@example.com"}
]
keywords = ["ai", "resume", "job-matching", "bigquery", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "google-cloud-bigquery>=3.25.0",
    "bigframes>=1.0.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "flask>=3.0.3",
    "scikit-learn>=1.4.2",
    "matplotlib>=3.8.3",
    "seaborn>=0.13.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.2",
    "pytest-cov>=4.1.0",
    "flake8>=7.0.0",
    "black>=24.2.0",
    "isort>=5.13.2",
    "mypy>=1.8.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/your-username/ai-powered-resume-matcher"
Documentation = "https://your-username.github.io/ai-powered-resume-matcher/"
Repository = "https://github.com/your-username/ai-powered-resume-matcher.git"
Issues = "https://github.com/your-username/ai-powered-resume-matcher/issues"
